PBM-70 Resolved draft button not showing preview

--- a/admin/css/angelleye-paypal-wp-button-manager-company.css
+++ b/admin/css/angelleye-paypal-wp-button-manager-company.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 body{
     background: #f0f0f1;
 }
@@ -23,10 +24,15 @@ body{
     top: -8px;
     margin-left: 10px;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-.paypal-ac-wordpress{
+.paypal-delete-guide {
+    font-weight: 500;
+    color: red;
+    font-size: 16px;
+}
+.paypal-ac-wordpress {
     font-family: 'Open Sans', sans-serif;
+    margin-top: 20px;
+    padding: 20px 20px;
 }
 .paypal-ac-setting{
     background: #fff;
@@ -200,6 +206,7 @@ body{
     cursor: pointer;
 }
 .paypal-ac-type-btn {
+    cursor: pointer;
     background: #1c9440;
     color: #fff;
     font-size: 16px;
